# simd_wrappers_cppcon2018

./: .gitmodules  CMakeLists.txt  README.md  mandelbrot.cpp  saxpy.cpp  saxpy_trig.cpp
cmake/: macros.cmake
